Fix assign Truck to Driver,Search for a Truck from it's number plate.
