# src/driver/model.js
@@ -1,4 +1,4 @@
-import { Schema, model } from 'mongoose';
+import mongoose, { Schema, model } from 'mongoose';
 import bcrypt from 'bcrypt';
 
 const userSchema = new Schema({
@@ -9,6 +9,11 @@ const userSchema = new Schema({
         type: String,
         unique: true,
         required: true
+    },
+    assignedTruck: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Truck',
+        default: null
     },
     password: {
         type: String,
