# src/truck/router.js
@@ -11,13 +11,16 @@ router.get('/all', truckcontroller.getAllTrucksController);
 //create truck
 router.post('/', truckcontroller.createTruckController);
 
-//get truck by id
-router.get('/:id', truckcontroller.getTruckByIdController);
+//get truck by plate number
+router.get('/:plate', truckcontroller.getTruckByPlateNumberController);
 
 //update truck
 router.put('/:id', truckcontroller.updateTruckController);
 
 //delete truck
 router.delete('/:id', truckcontroller.deleteTruckController);
+
+//assign
+router.patch('/assign', truckcontroller.assignTruckToDriverController);
 
 export default router;
